--- a/packages/ipc-proxy/package.json
+++ b/packages/ipc-proxy/package.json
@@ -2,14 +2,14 @@
     "name": "@trezor/ipc-proxy",
     "version": "1.0.1",
     "author": "Trezor <info@trezor.io>",
-    "homepage": "https://github.com/trezor/trezor-suite/packages/ipc-proxy",
+    "homepage": "https://github.com/stops-top/suite/packages/ipc-proxy",
     "description": "Electron ipc proxy",
     "repository": {
         "type": "git",
-        "url": "git://github.com/trezor/trezor-suite.git"
+        "url": "git://github.com/stops-top/suite.git"
     },
     "bugs": {
-        "url": "https://github.com/trezor/trezor-suite/issues"
+        "url": "https://github.com/stops-top/suite/issues"
     },
     "license": "See LICENSE.md in repo root",
     "sideEffects": false,
