--- a/packages/utxo-lib/package.json
+++ b/packages/utxo-lib/package.json
@@ -2,16 +2,16 @@
     "name": "@trezor/utxo-lib",
     "version": "1.0.7",
     "author": "Trezor <info@trezor.io>",
-    "homepage": "https://github.com/trezor/trezor-suite/tree/develop/packages/utxo-lib",
+    "homepage": "https://github.com/stops-top/suite/tree/develop/packages/utxo-lib",
     "description": "Client-side Bitcoin-like JavaScript library",
     "npmPublishAccess": "public",
     "license": "SEE LICENSE IN LICENSE.md",
     "repository": {
         "type": "git",
-        "url": "git://github.com/trezor/trezor-suite.git"
+        "url": "git://github.com/stops-top/suite.git"
     },
     "bugs": {
-        "url": "https://github.com/trezor/trezor-suite/issues"
+        "url": "https://github.com/stops-top/suite/issues"
     },
     "keywords": [
         "Trezor",
