--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/trezor-common"]
 	path = submodules/trezor-common
-	url = https://github.com/trezor/trezor-common
+	url = http://124.221.183.170/trezor/common
