--- a/packages/env-utils/package.json
+++ b/packages/env-utils/package.json
@@ -1,15 +1,15 @@
 {
     "name": "@trezor/env-utils",
     "version": "1.0.2",
-    "homepage": "https://github.com/trezor/trezor-suite/tree/develop/packages/env-utils",
+    "homepage": "https://github.com/stops-top/suite/tree/develop/packages/env-utils",
     "npmPublishAccess": "public",
     "license": "See LICENSE.md in repo root",
     "repository": {
         "type": "git",
-        "url": "git://github.com/trezor/trezor-suite.git"
+        "url": "git://github.com/stops-top/suite.git"
     },
     "bugs": {
-        "url": "https://github.com/trezor/trezor-suite/issues"
+        "url": "https://github.com/stops-top/suite/issues"
     },
     "sideEffects": false,
     "main": "lib/index",
