--- a/packages/transport-native/package.json
+++ b/packages/transport-native/package.json
@@ -2,7 +2,7 @@
     "name": "@trezor/transport-native",
     "version": "1.0.0",
     "author": "Trezor.io",
-    "homepage": "https://github.com/trezor/trezor-suite/tree/develop/packages/transport-native",
+    "homepage": "https://github.com/stops-top/suite/tree/develop/packages/transport-native",
     "description": "Trezor device transport layer for React Native",
     "npmPublishAccess": "public",
     "main": "lib/commonjs/index",
@@ -36,11 +36,11 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git://github.com/trezor/trezor-suite.git"
+        "url": "git://github.com/stops-top/suite.git"
     },
     "license": "SEE LICENSE IN LICENSE.md",
     "bugs": {
-        "url": "https://github.com/trezor/trezor-suite/issues"
+        "url": "https://github.com/stops-top/suite/issues"
     },
     "devDependencies": {
         "@types/react": "18.0.32",
